--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Dirtbike Manager</string>
+    <string name="app_name" translatable="false">Dirtbike Maintenance</string>
     <string name="bike_list">Your dirtbikes:</string>
     <string name="back">Back</string>
     <string name="validate">Validate</string>
@@ -51,7 +51,7 @@
     <string name="you_rode_X_hours_last_ride">You rode %1$s hours on your last ride. We’ll add them to your bike’s current %2$s hours and update your consumables.</string>
     <string name="home">Home</string>
     <string name="about">About</string>
-    <string name="app_explain">Dirtbike Manager is a <b>100% free</b> app built by a passionate rider.</string>
+    <string name="app_explain">Dirtbike Maintenance is a <b>100% free</b> app built by a passionate rider.</string>
     <string name="app_explain2">GitHub: <a href="https://github.com/Z3nk/Motorcycle-Manager">https://github.com/Z3nk/Motorcycle-Manager</a></string>
     <string name="app_explain3">Contact: <a href="mailto:dirtbikemanager@gmail.com">dirtbikemanager@gmail.com</a></string>
     <string name="app_explain4">Support the project by leaving a <b>5-star review</b> on the Play Store!</string>
