--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -42,7 +42,7 @@
     <string name="add_dirtbike">Aggiungi moto</string>
     <string name="time_remaining">%1$.1f ore rimanenti</string>
     <string name="time_remining_exceed">%1$.1f ore in eccesso</string>
-    <string name="consommable_hours">%1$.1f ore</string>
+    <string name="x_hours">%1$.1f ore</string>
     <string name="consumables_number">Consumabili: %1$d</string>
     <string name="checks_number">Punti di controllo: %1$d</string>
     <string name="times_number">Ore moto: %1$s</string>
@@ -58,4 +58,5 @@
     <string name="add_com_or_not">Aggiungi una nota o lascia vuoto</string>
     <string name="comment">Nota</string>
     <string name="explain_lifespan_optional">Vuoi essere avvisato quando cambiare questo pezzo in base alla sua durata?</string>
+    <string name="renew_after_x_hours">rinnova dopo %1$.1f ore</string>
 </resources>
